pgAdmin-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: product
spec:
  selector:
   matchLabels:
    app: pgadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
              name: pgadminport
          volumeMounts:
            - name: pgadmin-data
              mountPath: /pgadmin4
            - name: pgadmin-servers-config
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
