postgres-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
 name: db-pod
 namespace: product
 labels:
   app: postgres
spec:
 containers:
   - image: postgres:10.4
     name: postgres
     volumeMounts:
     - name: myvol
       mountPath: /etc/config
     - name: db-init-script
       mountPath: /docker-entrypoint-initdb.d/
     ports:
       - containerPort: 5432
 volumes:
   - name: myvol
     persistentVolumeClaim:
       claimName: postgress-pvc
   - name: db-init-script
     configMap:
       name: db-init-script
