product-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-manager-deployment
  labels:
    app: product-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-manager
  template:
    metadata:
      labels:
        app: product-manager
    spec:
      containers:
      - name: product-manager
        image: vladandreiy/product-manager:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
