authentication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: auth
spec:
  selector:
    app: authentication
  ports:
    - protocol: TCP
      port: 80
      targetPort: 7000
  type: LoadBalancer
