pgAdmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    name: pgadmin-service
    app: pgadmin
  namespace: product
spec:
  selector:
    app: pgadmin
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
