portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer-service
  labels:
    name: portainer-service
    app: portainer
  namespace: portainer
spec:
  selector:
    app: portainer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
  type: NodePort
