product-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-manager-service
  namespace: product
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: product-manager
