product-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-auth
  namespace: product
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
      matchLabels:
        name: auth
